# skyshelve

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  go.mod  go.sum  pyproject.toml  skyshelve.go
examples/: demo.py  indexed_profiles.py  persistent_object.py  scan_example.py  simple_counter.py  slatedb_backend.py
src/badgerdict/: __init__.py
src/skyshelve/: __init__.py
tests/: conftest.py  test_concurrency.py  test_persistent_object.py  test_serialization.py
