[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "badgerdict"
version = "0.1.0"
description = "Persistent dictionary for Python backed by BadgerDB and a Go shared library"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "BadgerDict Authors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["badgerdict*"]

[tool.setuptools.package-data]
badgerdict = ["libbadgerdict.*"]
