[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyshelve"
version = "0.1.0"
description = "Backend-agnostic persistent dictionary for Python with BadgerDB and SlateDB support"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Skyshelve Authors" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["skyshelve*"]

[tool.setuptools.package-data]
skyshelve = ["libskyshelve.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["build", "dist", "external", ".cargo", ".rustup", "venv"]
